--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
 
   <meta charset="utf-8">
   <meta property="description" name="description" content="">
+  <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
 </head>
 
 <body>
